# chat_emploi

./: .gitignore  DESIGN.md  PLANNING.md  PRD.md  PROGRESS_TRACKER.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TECH_SPECS.md  init_project.sh
.github/workflows/: build-and-test.yml  build-and-test.yml.backup  e2e-tests.yml  release.yml
backend/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  install_agent_deps.sh  load_test_data.py  performance_benchmark_report.json  performance_benchmark_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_performance.py  test_robustness.py
backend/migrations/: env.py
backend/migrations/versions/: f2c1dac4af20_initial_migration.py
backend/scripts/: benchmark_performance.py
backend/src/: __init__.py
backend/src/agents/: orchestrator.py
backend/src/api/: jsonrpc_server.py  main.py  rpc_server.py
backend/src/database/: models.py
backend/src/monitoring/: metrics.py
backend/src/rag/: __init__.py  core.py
backend/src/services/: __init__.py  letter_generator.py
backend/src/services/cache/: __init__.py  cache_service.py
backend/src/services/cv/: __init__.py  cv_service.py
backend/src/services/embedding/: __init__.py  embedding_service.py
backend/src/services/vector_store/: __init__.py  vector_store_service.py
backend/src/templates/: base_letter.html
backend/tests/: conftest.py
backend/tests/data/: rag_test_dataset.py
backend/tests/integration/: test_api_integration.py  test_letter_quality.py  test_monitoring.py  test_system_integration.py
backend/tests/unit/: test_basic.py  test_metrics.py  test_models.py
backend/tests/unit/agents/: test_agent_orchestrator.py
backend/tests/unit/api/: test_jsonrpc_server.py
backend/tests/unit/rag/: test_rag_core.py
backend/tests/unit/services/: test_cache_service.py  test_cv_service.py  test_embedding_service.py  test_letter_generator.py  test_vector_store.py
docs/: TECHNICAL_COOLDOWN_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: .eslintrc.performance.js  eslint.config.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright-custom.d.ts  playwright.config.ts  tailwind.config.ts  test-alias.js  test-alias.mjs  tsconfig.json  tsconfig.json.backup  tsconfig.tsbuildinfo  vitest.config.ts  vitest.d.ts  vitest.setup.ts
frontend/scripts/: analyze-bundle.js  run-persona-tests.sh  setup-e2e-tests.sh
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.test.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/tests/: integration_test.rs
frontend/src/app/: layout.tsx  page.test.tsx  page.tsx
frontend/src/stores/: session-store.test.ts  session-store.ts
frontend/src/styles/: globals.css
frontend/src/types/: job-offer.ts
frontend/tests/components/: ui.test.tsx
frontend/tests/e2e/: README-PERSONAS.md  README.md  critical-flows.spec.ts  (+3 more)
infrastructure/monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
scripts/: ci-cd-summary.md  diagnose-ci-cd.sh  fix-alias-imports.sh  fix-all-test-imports.sh  fix-ci-cd-issues.sh  fix-ci-imports.sh  fix-test-imports.sh  quick-ci-fix.sh
scripts/debug/: tauri-build-debug.sh
scripts/dev/: setup.sh  start-monitoring.sh  start.sh
scripts/integration/: test-full-system.sh
scripts/release/: build-all-platforms.sh
(+40 files in other folders)
