[package]
name = "chat-emploi"
version = "0.1.0"
description = "Chat Emploi - Votre coach emploi empathique"
authors = ["Chat Emploi Team"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["opener"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
# this feature is used for production builds when using the desktop-only Tauri CLI
# it should NOT be enabled for mobile builds
custom-protocol = ["tauri/custom-protocol"]